# shell-cell

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  build.rs  cliff.toml  cspell.json  deny.toml  dist-workspace.toml  roadmap.md  scell.cue  scell.yml
.claude/skills/gh-cli/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  e2e-nightly.yml  jekyll-gh-pages.yml  pr_title.yml  publish.yml  release.yml
docs/: Gemfile  SUMMARY.md  _config.yml  blueprint.md  cli.md  file.md  index.md  install.md  readme.md  source_file.md
e2e-tests/: .gitignore  README.md  pyproject.toml
e2e-tests/data/: scell.yml
e2e-tests/data/common/: scell.cue  scell.yml
e2e-tests/data/extra-args/: .scell_args.cue  scell.cue
e2e-tests/data/extra-args/mount-source/: mount_test.txt
e2e-tests/data/from_docker/: Dockerfile  scell.cue  scell.yml
e2e-tests/data/from_docker/copy-source/: copy_test.txt
e2e-tests/tests/: conftest.py  scell.py  scell_conf.py  test_basic.py  test_init.py  test_run.py
src/: crate_info.rs  error.rs  main.rs  proto.rs  pty.rs  scell.rs  version_check.rs
src/buildkit/: container_info.rs  docker.rs  image_info.rs  mod.rs
src/cli/: ls.rs  mod.rs  progress.rs  run.rs  stop.rs  terminal.rs
src/cli/cleanup/: headless.rs  mod.rs
src/cli/cleanup/app/: mod.rs  ui.rs
src/cli/cleanup/app/cleanning/: mod.rs  ui.rs
src/cli/init/: mod.rs  template_scell.cue  template_scell.yml
src/cli/ls/: headless.rs  mod.rs
src/cli/ls/app/: confirm_remove.rs  error_state.rs  ls.rs  mod.rs  removing.rs  show_definition.rs  stopping.rs  ui.rs
src/cli/ls/app/confirm_remove/: mod.rs  ui.rs
src/cli/ls/app/error_state/: mod.rs  ui.rs
src/cli/ls/app/error_window/: mod.rs  ui.rs
src/cli/ls/app/help_window/: mod.rs  ui.rs
src/cli/ls/app/inspect/: mod.rs  ui.rs
src/cli/ls/app/loading/: mod.rs  ui.rs
src/cli/ls/app/ls/: mod.rs  ui.rs
src/cli/ls/app/removing/: mod.rs  ui.rs
src/cli/ls/app/show_definition/: mod.rs  ui.rs
src/cli/ls/app/stopping/: mod.rs  ui.rs
src/cli/run/: mod.rs
src/cli/run/app/: mod.rs  ui.rs  vt.rs
src/cli/run/app/help_window/: mod.rs  ui.rs
src/cli/run/app/preparing/: mod.rs  ui.rs
src/cli/run/app/running_pty/: mod.rs  ui.rs
src/cli/stop/: headless.rs  mod.rs
src/cli/stop/app/: mod.rs  ui.rs
src/cli/stop/app/loading/: mod.rs  ui.rs
src/cli/stop/app/stopping/: mod.rs  ui.rs
src/debugger/: conf.rs  mod.rs
src/error/: mod.rs  report.rs  user_err.rs
src/pty/: callbacks.rs  mod.rs  tests.rs
src/pty/callbacks/: csi.rs  esc.rs  mod.rs
src/scell/: compile.rs  container.rs  container_info.rs  image.rs  link.rs  mod.rs  name.rs  service.rs
src/scell/compile/: errors.rs  mod.rs
src/scell/compile/tests/: mod.rs  simple_other_target.yml
src/scell/compile/tests/err/: mod.rs
src/scell/compile/tests/err/circular_targets/: scell.cue  scell.yml
src/scell/compile/tests/err/copy_src_not_found/: scell.cue  scell.yml
src/scell/compile/tests/err/dir_not_found_from_stmt/: scell.cue  scell.yml
src/scell/compile/tests/err/dockerfile_not_found/: scell.cue
src/scell/compile/tests/err/file_load_from_stmt/: scell.cue  scell.yml
src/scell/compile/tests/err/missing_entrypoint/: scell.cue
src/scell/compile/tests/err/missing_hang_stmt/: scell.cue  scell.yml
src/scell/compile/tests/err/missing_shell_stmt/: scell.cue  scell.yml
src/scell/compile/tests/err/missing_target/: scell.cue  scell.yml
src/scell/compile/tests/ok/: mod.rs
src/scell/compile/tests/ok/all_stmts/: scell.cue  scell.yml
src/scell/compile/tests/ok/build_stmt/: scell.cue  (+1 more)
src/scell/compile/tests/simple_default_target/: scell.yml
src/scell/compile/tests/simple_few_targets/: scell.yml
src/scell/parser/: mod.rs  name.rs  shell.rs  target.rs  workspace.rs
src/scell/types/: args.rs  errors.rs  extra_arguments.rs  mod.rs  name.rs  scell_schema.cue
src/scell_file/: build.rs  copy.rs  def.rs  docker.rs  image.rs  mod.rs  name.rs  run.rs  scell.rs  shell.rs
(+25 files in other folders)
