[package]
name = "shell-cell"
version = "0.1.0"
edition = "2024"
authors = [
    "Alex Pozhylenkov <leshiy12345678@gmail.com>"
]
license = "MIT OR Apache-2.0"

[lints.rust]
warnings = "deny"
missing_docs = "allow"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_time_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "allow"
arithmetic_side_effects = "deny"


[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
bollard = "0.20.0"
bytes = "1.11.0"
clap = "4.5.56"
crossterm = "0.29.0"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
metrohash = "1.0.7"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
test-case = "3.3.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
yaml_serde = "0.10.3"

[dev-dependencies]
test-case = "3.3.1"
