[package]
name = "shell-cell"
version = "0.3.1"
edition = "2024"
description = "Shell-Cell. CLI app to spawn and manage containerized shell environments"
repository = "https://github.com/Mr-Leshiy/shell-cell"
authors = [
    "Alex Pozhylenkov <leshiy12345678@gmail.com>"
]
license = "MIT OR Apache-2.0"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "scell"
path = "src/main.rs"
test = true
bench = false
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(track_caller)'] }
warnings = "deny"
missing_docs = "allow"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_time_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "allow"
arithmetic_side_effects = "deny"


[dependencies]
async-channel = "2.5.0"
bollard = "0.20.0"
bytes = "1.11.0"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.3"
itertools = "0.14.0"
metrohash = "1.0.7"
regex = "1.12.2"
reqwest = { version = "0.12.13", features = ["json"] }
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
test-case = "3.3.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tui-term = "0.3.1"
yaml_serde = "0.10.3"

terminput = "0.5.12"
terminput-crossterm = "0.4.8"
ratatui = "0.30.0"

[dev-dependencies]
test-case = "3.3.1"

[build-dependencies]
built = "0.8.0"
