[project]
name = "e2e-tests"
version = "0.1.0"
description = "End-to-end tests for the scell binary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pexpect>=4.9",
    "pytest>=8.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
